# fohispital

./: .env  .envrc  .gitignore  .null-ls_631093_main.py  Dockerfile  README.md  api_client.ipynb  ex_psql_jsonb.ipynb  ex_psql_jsonb.py  flake.nix  logfile  main.py  pyproject.toml  requirements.txt  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4mkd7w0c6laqxqv6g5p5fbr7rwbbkn50-source  js9jf22xp0wqa3rqqdgl0xwqkw6achgy-source
.ipynb_checkpoints/: ex_psql_jsonb-checkpoint.ipynb
.tmp/db/: postgresql.conf  postmaster.opts  postmaster.pid
.tmp/db/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  2676  pg_control  pg_internal.init
.tmp/db/pg_stat/: db_0.stat  db_14775.stat  db_16384.stat  global.stat
.tmp/db/pg_stat_tmp/: db_0.stat  db_14775.stat  db_16384.stat  global.stat
.tmp/db/pg_xact/: 0000
app/: crud.py  database.py  jq  main.py  models.py  schemas.py
app/data/: dump.rdb  init_db.py
app/data/fhir_resources/: patient-example.canonical.json  patient-f001.csv  practitioner-nurse.json  relatedperson-example-f001-sarah.canonical.json  relatedperson-example.canonical.json
app/routers/: database.py  patients.py  related_persons.py
app/routers/fhir_resources/: patient-example-b.canonical.json  patient-example-c.canonical.json  patient-example-d.canonical.json  patient-example-dicom.canonical.json  (+1 more)
fhir_resources/: f001.json
(+157 files in other folders)
